# Frenet_CPP

./: CMakeLists.txt  README.md
include/: cubic_spline.h  frenet_optimal_traj.hpp  frenet_path.h  frenet_types.h  quartic_polynomial.h  quintic_polynomial.h
src/: test_frenet.cpp
